--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 POSTGRES_USER="seuUsuarioPostgres"
 POSTGRES_PASSWORD="suaSenhaPostgres"
 POSTGRES_DB="suaDatabasePostgres"
+DATABASE_URL= "postgres://user:password@localhost:5432/database"
